# prs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  todo.md  tomb-list-output.txt
ci/gpgme/: build
cli/: Cargo.toml  build.rs
cli/src/: crypto.rs  main.rs  util.rs  viewer.rs
cli/src/action/: add.rs  alias.rs  clone.rs  copy.rs  delete.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  lock.rs  mod.rs  move.rs  new.rs  remove.rs  show.rs  slam.rs  sync.rs
cli/src/action/housekeeping/: mod.rs  recrypt.rs  run.rs  sync_keys.rs
cli/src/action/internal/: clip.rs  clip_revert.rs  completions.rs  mod.rs  totp_recopy.rs
cli/src/action/recipients/: add.rs  export.rs  generate.rs  list.rs  mod.rs  remove.rs
cli/src/action/sync/: commit.rs  init.rs  mod.rs  remote.rs  reset.rs  status.rs
cli/src/action/tomb/: close.rs  init.rs  mod.rs  open.rs  resize.rs  status.rs
cli/src/action/totp/: copy.rs  live.rs  mod.rs  qr.rs  show.rs
cli/src/cmd/: handler.rs  mod.rs
cli/src/cmd/arg/: allow_dirty.rs  mod.rs  no_sync.rs  property.rs  query.rs  store.rs  timeout.rs  viewer.rs
cli/src/cmd/matcher/: add.rs  alias.rs  clone.rs  copy.rs  delete.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  lock.rs  main.rs  mod.rs  move.rs  new.rs  remove.rs  show.rs  slam.rs  sync.rs
cli/src/cmd/matcher/housekeeping/: mod.rs  recrypt.rs  run.rs  sync_keys.rs
cli/src/cmd/matcher/internal/: clip.rs  clip_revert.rs  completions.rs  mod.rs  totp_recopy.rs
cli/src/cmd/matcher/recipients/: add.rs  export.rs  generate.rs  list.rs  mod.rs  remove.rs
cli/src/cmd/matcher/sync/: commit.rs  init.rs  mod.rs  remote.rs  reset.rs  status.rs
cli/src/cmd/matcher/tomb/: close.rs  init.rs  mod.rs  open.rs  resize.rs  status.rs
cli/src/cmd/matcher/totp/: copy.rs  live.rs  mod.rs  qr.rs  show.rs
cli/src/cmd/subcmd/: add.rs  alias.rs  clone.rs  copy.rs  delete.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  lock.rs  mod.rs  move.rs  new.rs  remove.rs  show.rs  slam.rs  sync.rs
cli/src/cmd/subcmd/housekeeping/: mod.rs  recrypt.rs  run.rs  sync_keys.rs
cli/src/cmd/subcmd/internal/: clip.rs  clip_revert.rs  completions.rs  mod.rs  totp_recopy.rs
cli/src/cmd/subcmd/recipients/: add.rs  export.rs  generate.rs  list.rs  mod.rs  remove.rs
cli/src/cmd/subcmd/sync/: commit.rs  init.rs  mod.rs  remote.rs  reset.rs  status.rs
cli/src/cmd/subcmd/tomb/: close.rs  init.rs  mod.rs  open.rs  resize.rs  status.rs
cli/src/cmd/subcmd/totp/: copy.rs  live.rs  mod.rs  qr.rs  show.rs
cli/src/util/: base64.rs  cli.rs  clipboard.rs  cmd.rs  edit.rs  error.rs  fs.rs  mod.rs  pass.rs  progress.rs  secret.rs  select.rs  select_basic.rs  select_fzf.rs  select_fzf_bin.rs  select_skim.rs  select_skim_bin.rs  skim.rs  stdin.rs  style.rs  sync.rs  time.rs  tomb.rs  totp.rs  viewer.rs
docs/: connection-reuse.md
gtk3/: Cargo.toml
gtk3/src/: main.rs
lib/: Cargo.toml  LICENSE  build.rs
lib/src/: crypto.rs  crypto_old.rs  git.rs  lib.rs  store.rs  sync.rs  systemd_bin.rs  tomb.rs  tomb_bin.rs  types.rs  util.rs
lib/src/crypt/: gnupg_bin.rs  gpgme.rs  mod.rs
lib/src/crypt/extra/: mod.rs
lib/src/crypt/extra/backend/gnupg_bin/: context.rs  raw.rs  raw_cmd.rs
lib/src/crypt/extra/backend/gpgme/: context.rs  raw.rs
lib/src/crypt/extra/proto/: gpg.rs
lib/src/crypto/: mod.rs  recipients.rs  store.rs  util.rs
lib/src/crypto/backend/: mod.rs
lib/src/crypto/backend/gnupg_bin/: context.rs  mod.rs  raw.rs  raw_cmd.rs
lib/src/crypto/backend/gpgme/: context.rs  mod.rs  raw.rs
lib/src/crypto/backend/rpgpie/: context.rs  mod.rs  raw.rs
lib/src/crypto/proto/: gpg.rs  mod.rs
lib/src/util/: env.rs  fs.rs  git.rs  mod.rs  proc.rs  tty.rs
pkg/aur/: publish
pkg/aur/prs/: PKGBUILD
pkg/aur/prs-git/: PKGBUILD
pkg/brew/: prs.rb
pkg/docker/: Dockerfile  README.md
res/: asciinema-demo.cast  asciinema-to-svg
scripts/dmenu/: prs-copy  prs-type
scripts/rofi/: prs-copy  prs-type
src/: lib.rs  main.rs
src/cli/: main.rs
src/lib/: crypto.rs  lib.rs
