[package]
name = "prs-gtk3"
version = "0.2.11"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/prs", branch = "master" }

[features]
default = ["backend-gnupg-bin", "notify"]

### Regular features

# Option (default): notification support (clipboard notifications)
notify = ["notify-rust"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["prs-lib/backend-gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["prs-lib/backend-gnupg-bin"]

[dependencies]
anyhow = "1.0"
gdk = "0.14"
gio = { version = "0.14", features = ["v2_58"] }
glib = "0.14"
gtk = { version = "0.14", features = ["v3_24"] }
prs-lib = { version = "0.2.11", path = "../lib", default-features = false }
thiserror = "1.0"

# Notification support
notify-rust = { version = "4.3", optional = true }

[[bin]]
name = "prs-gtk3-copy"
path = "./src/main.rs"
