[package]
name = "prs-gtk3"
version = "0.4.0-rc.1"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
]
edition = "2018"

[features]
default = ["backend-gnupg-bin", "notify", "tomb"]

### Regular features

# Option (default): notification support (clipboard notifications)
notify = ["notify-rust"]

# Option (default): tomb support for password store on Linux
tomb = ["prs-lib/tomb"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["prs-lib/backend-gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["prs-lib/backend-gnupg-bin"]

[dependencies]
anyhow = "1.0.68"
gdk = "0.16.2"
gio = { version = "0.16.7", features = ["v2_58"] }
glib = "0.16.7"
gtk = { version = "0.16.2", features = ["v3_24"] }
prs-lib = { version = "0.4.0-rc.1", path = "../lib", default-features = false }
thiserror = "1.0.38"

# Notification support
notify-rust = { version = "4.6.0", optional = true }

[[bin]]
name = "prs-gtk3-copy"
path = "./src/main.rs"
