[package]
name = "prs-lib"
version = "0.4.0-rc.1"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "LGPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
]
edition = "2018"

[features]
default = ["backend-gnupg-bin"]

### Regular features

# Option: tomb support for password store on Linux
tomb = ["fs_extra"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["regex", "version-compare"]

### Private/internal/automatic features

# GnuPG (gpg) crypto support
_crypto-gpg = []

[dependencies]
anyhow = "1.0.68"
git-state = "0.1.0"
lazy_static = "1.4.0"
secstr = "0.5.1"
thiserror = "1.0.38"
walkdir = "2.3.2"
which = "4.3.0"
zeroize = "1.5.7"

# Tomb support
fs_extra = { version = "1.2.0", optional = true }

# Crypto backend: GPGME
gpgme = { version = "0.11.0", optional = true }

# Crypto backend: gnupg binary
version-compare = { version = "0.1.1", optional = true }
regex = { version = "1.7.0", optional = true, default-features = false, features = ["std"] }

# Vendored shellexpand fork until crate is updated
# See ./src/vendor/shellexpand.rs
dirs-next = "2.0.0"
# shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.1", default-features = false, features = ["user", "signal"] }
ofiles = "0.2.0"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
