[package]
name = "prs-lib"
version = "0.5.0"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "LGPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
]
edition = "2018"

[features]
default = ["backend-gnupg-bin"]

### Regular features

# Option: tomb support for password store on Linux
tomb = ["fs_extra"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["regex", "shlex", "version-compare"]

### Private/internal/automatic features

# GnuPG (gpg) crypto support
_crypto-gpg = []

[dependencies]
anyhow = "1.0"
git-state = "0.1"
lazy_static = "1.4"
secstr = "0.5"
shellexpand = "3.0"
thiserror = "1.0"
walkdir = "2.3"
which = "4.3"
zeroize = "1.5"

# Tomb support
fs_extra = { version = "1.2", optional = true }

# Crypto backend: GPGME
gpgme = { version = "0.11", optional = true }

# Crypto backend: gnupg binary
regex = { version = "1.7", optional = true, default-features = false, features = ["std", "unicode-perl"] }
shlex = { version = "1.1", optional = true }
version-compare = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["user", "signal"] }
ofiles = "0.2"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
