[package]
name = "prs-lib"
version = "0.5.3"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "LGPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = ["authentication", "command-line-utilities", "cryptography"]
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["backend-gnupg-bin"]

### Regular features

# Option: tomb support for password store on Linux
tomb = ["fs_extra"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["regex", "shlex", "version-compare"]

# Option: Use backend rpgpie for a rust-based pgp implementation
backend-rpgpie = [
    "chrono",
    "pgp",
    "rpgpie",
    "rpgpie-certificate-store",
    "openpgp-card",
    "openpgp-card-rpgp",
    "openpgp-card-state",
    "card-backend-pcsc",
]

### Private/internal/automatic features

# GnuPG (gpg) crypto support
_crypto-gpg = []

[dependencies]
anyhow = "1.0"
git-state = "0.1"
lazy_static = "1.4"
secstr = "0.5"
shellexpand = "3.0"
thiserror = "2.0"
walkdir = "2.3"
which = "8.0"
zeroize = "1.5"

# Tomb support
fs_extra = { version = "1.2", optional = true }

# Crypto backend: GPGME
gpgme = { version = "0.11", optional = true }

# Crypto backend: gnupg binary
regex = { version = "1.7", optional = true, default-features = false, features = [
    "std",
    "unicode-perl",
] }
shlex = { version = "1.3", optional = true }
version-compare = { version = "0.2", optional = true }

# Crypto backend: rpgpie crate
chrono = { version = "0.4", optional = true }
pgp = { version = "0.14", optional = true }
rpgpie = { version = "0.4", optional = true }
rpgpie-certificate-store = { version = "0.2", optional = true }
openpgp-card = { version = "0.5", optional = true }
openpgp-card-rpgp = { version = "0.2", optional = true }
openpgp-card-state = { version = "0.3", optional = true }
card-backend-pcsc = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = [
    "user",
    "signal",
] }
ofiles = "0.2"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
